@@ -103,6 +103,8 @@ Bug Fixes
  2. autoCommit/maxDocs was not working properly when large autoCommit/maxTime
     was specified (klaas)
 
+ 3. SOLR-283: autoCommit was not working after delete. (ryan)
+
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
